succAKM/akmLine/common/log/oldLog/runall_p5112.log.error.log
[CRITICAL]2021-03-12 16:34:14,946: import main_button failed, path: button cause a error: invalid syntax (main_button.py, line 81)
pid=5112, ppid=1308, tid=4188
Traceback (most recent call last):
  File "D:\akmLine\common\run_all.py", line 39, in findModule
    __import__(m[1])
  File "D:\akmLine\button\main_button.py", line 81
    log.info('+++++loc':Current_loc)
                       ^
SyntaxError: invalid syntax

[CRITICAL]2021-03-12 16:34:14,953: import main_button failed, path: button ,cause invalid syntax (main_button.py, line 81)
